# exploration_benchmarking

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  environment-minimal.yml  launch.sh
benchmark_utils/: benchmark.py  print_logs.py  time_benchmark.py
ros2_simulation/: generate_configs.py  multiruns.py  replay_from_bag.py  singlerun.py  spawncontainers.py
ros2_simulation/config_templates/: example_template.yaml  testing_template.yaml
ros2_simulation/config_templates/examples/: example_template.yaml
ros2_simulation/configs/: example_gmapping.yaml  example_slam_toolbox.yaml  replay_slam_toolbox.yaml
ros2_simulation/configs/examples/: example_gmapping.yaml  example_slam_toolbox.yaml
ros2_simulation/configs/replay/: example_replay.yaml
ros2_simulation/generate_configs/: example_template.yaml
ros2_simulation/params/: example.yaml  example_slam_toolbox.yaml  main.yaml
ros2_simulation/params/exploration/: params.yaml  params_costmap.yaml
ros2_simulation/params/navigation/: nav2_params.yaml
ros2_simulation/params/replay/: example.yaml
ros2_simulation/params/slam/: gmapping_1.yaml  slam_toolbox_1.yaml
ros2_simulation/rviz/: explore-lite.rviz
ros2_simulation/src/exploration_benchmarking_msgs/: CMakeLists.txt  package.xml
ros2_simulation/src/exploration_benchmarking_msgs/msg/: ClosestObstacle.msg  Distances.msg
src/exploration_benchmarking/: package.xml  setup.py
src/exploration_benchmarking/launch/: simple_simulation.launch.py
src/exploration_benchmarking/params/: nav2_params.yaml
worlds/: 41-0.world  41-1.world  41-2.world  44-0.world  50-1.world  50-2.world  E34-2.world  E48-3.world  E60-2.world  worldcfg.inc
(+14 files in other folders)
