<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exploration_benchmarking</name>
  <version>0.0.1</version>
  <description>Launch the benchmarking of an exploration algorithm</description>
  <maintainer email="pierrebrd7@gmail.com">pierre</maintainer>
  <license>MIT</license>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_core</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>stage_ros2</exec_depend>
  <exec_depend>ros2_gmapping</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
